Fixed font sizing on mobile git add --all

--- a/YesBabyLisa.css
+++ b/YesBabyLisa.css
@@ -148,7 +148,7 @@ body {
 
 @media (max-width: 480px) {
   body {
-    font-size: 1em;
+    font-size: 2em;
   }
 
   .link-grid .clock,
